// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field component should have field classname with addons classname 1`] = `
<DocumentFragment>
  <div
    class="field has-addons"
  >
    <div
      class="has-background-success"
    >
      <p>
        Default
      </p>
      <p>
        Container
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field component should have field classname with grouped classname 1`] = `
<DocumentFragment>
  <div
    class="field is-grouped"
  >
    <div
      class="has-background-success"
    >
      <p>
        Default
      </p>
      <p>
        Container
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field component should render 1`] = `
<DocumentFragment>
  <div
    class="field"
  />
</DocumentFragment>
`;

exports[`Field component should render 2`] = `
<DocumentFragment>
  <div
    class="field-label is-normal"
  />
</DocumentFragment>
`;

exports[`Field component should render 3`] = `
<DocumentFragment>
  <div
    class="field-body"
  />
</DocumentFragment>
`;
